contrast issue

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -49,7 +49,7 @@ nav {
   height: 1.5em;
   padding-left: 1em;
   background-color: #E3EEEA;
-  color: #273F37;
+  color: #102C23;
 }
 
 a {
